--- a/app/src/styles/layout.scss
+++ b/app/src/styles/layout.scss
@@ -6,8 +6,14 @@
 .background {
 }
 
-
+.page{
+    padding-bottom: 60px;
+}
 // .skill-container:not(:first-child){
 //     margin-left: 20px;
 // }
 
+
+.col{
+    width: 100%;
+}
