--- a/app/src/components/layout/navbar/Navbar.scss
+++ b/app/src/components/layout/navbar/Navbar.scss
@@ -8,7 +8,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    z-index: 10;
+    z-index: 99;
     padding: 0 15px;
 }
 
@@ -50,7 +50,7 @@
     right: -100vw;
     width: 100%;
     height: 100vh;
-    padding: 60px 100px;
+    padding: 60px 0;
     top: 0;
     background: $background;
     transition: 0.4s;
@@ -68,8 +68,9 @@
 
 
 .mobile-menu-toggle {
-    bottom: 25px;
-    right: 25px;   
+  top: unset !important;
+  bottom: 25px ;
+  right: 25px ;   
 }
 
 
@@ -89,7 +90,6 @@
     top: 25px;
     right: 25px;
     cursor:pointer;
-    border-radius:5px;
     z-index: 100;
     transition: 0.25s ease-in-out;
     background: #363636;
@@ -106,10 +106,6 @@
       position:absolute;
       height:100%;
       width:100%;
-    //   top: 50%;
-    //   left: 50%;
-    //   transform: translate(-50%, -50%);
-
       span {
         width:35px;
         height:3px;
