--- a/app/src/styles/typography.scss
+++ b/app/src/styles/typography.scss
@@ -1,5 +1,7 @@
 @import './theme.scss';
 
+$paragraph-size: 18px;
+
 :root{
     --page-title: 36px;
     --title: 28px;
@@ -7,19 +9,26 @@
 }
 
 div, p{
-    color: #ccc;
+    color: $inactive-text-color;
 }
 
-p{
-    line-height: 2em;
-    font-size: 18px;
+p, .typing{
+    // line-height: 2em;
+}
+
+p, div, li {
+    font-size: $paragraph-size;
 }
 
 
 a {
-    color: inherit;
     text-decoration: none;
-}
+    color: rgba(255,255,255,0.7);
+    &:hover{
+      color: rgba(255,255,255,1) !important;
+    }
+  }
+  
 
 a:hover{
     color: "black"
@@ -36,6 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .section-header{
     // text-transform:uppercase;
+    font-size: 21px;
     line-height:3.5em;
 }
 
@@ -51,20 +61,27 @@ h1, h2, h3, h4, h5, h6 {
 
 .subtitle, h6{
     // font-size: var(--subtitle);
-    color: rgba(255,255,255,0.7);
+    color: $inactive-text-color;
     font-size: 24px;
 }
 
 .link {
-    color: rgba(255,255,255,0.7);
+    color: $inactive-text-color;
     cursor: pointer;
     &:hover{
-        color: rgba(255,255,255,1);
+        color: $active-text-color;
+    }
+    &:hover a {
+        color: $active-text-color;
+
     }
 }
+.typing-link{
+    text-decoration: underline !important;
+}
 
-.link a:hover{
-    color: white;
+.typist{
+    white-space: pre-wrap;
 }
 
 .centered-text{
