--- a/src/pages/public/work/projects/ProjectPage.scss
+++ b/src/pages/public/work/projects/ProjectPage.scss
@@ -1,3 +1,6 @@
+$maxSlideHeight: 450px;
+$maxThumbHeight: 80px;
+
 .project-page-title {
     font-size: 48px;
 }
@@ -9,8 +12,14 @@
 
 .project-page-image {
     // height: 85vh;
-    object-fit: cover;
-    object-position: 0 0;
+    object-fit: contain;
+    object-position: 50% 50%;
+    max-height: $maxSlideHeight;
+    
+}
+
+.mobile-slide-image{
+    width: 50%;
 }
 // overriding react-responsive-carousel styles
 .slide-image{
@@ -19,17 +28,47 @@
     align-items: center !important;
 }
 
+.slide > div{
+    // height: 100% !important;
+}
+
 .thumb{
     border: 3px solid transparent !important;
+    max-height: $maxThumbHeight;
+    height: $maxThumbHeight;
+}
+
+.thumb img{
+    object-fit: contain;
+    margin: 0 auto;
+    height: 100%;
 }
 
 .thumb:hover, .thumb.selected{
     border: 3px solid #fff !important;
 }
 
-.carousel.slide img, .carousel img{
-    width:unset !important;
-    max-width: 100%;
-    margin: 0 auto;
+// .carousel.slide img, .carousel img{
+//     max-width: 100%;
+//     margin: 0 auto;
+// }
+
+.video-slide{
+    position: relative;
+    height: $maxSlideHeight !important;
+    // position: absolute;
+    // top: 50%;
+    // transform: translateY(-50%);
+    
 }
 
+.video-slide iframe{
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+//   -webkit-transform: translate(-50%, -50%);
+//   width: 100%;
+//   height: 100%;
+//   max-width: 100%;
+}
