got multimedia carousel working. added mowbray-counter project. updated project descriptions to be more descriptive. added an expanded property which affects whether the thumbnail of the project uses background-size:cover or contain

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,9 +33,9 @@ img {
 
 .main{
   // padding-top: var(--navbar-height);
-  // background-image: url("../assets/images/background.png"); 
+  background-image: url("../assets/images/background.png"); 
   // let the background repet
-  background-size: contain;
+  background-size: cover;
   cursor: default;
   width: 100%;
   min-height: 100vh;
