--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -14,7 +14,7 @@
     }
 }
 
-button, .button {
+.button {
     border: 2px solid #ccc;
     background: transparent;
     color: $inactive-text-color;
