--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,11 @@
-@import '~antd/dist/antd.css';
 @import "./components.scss";
 @import "./layout.scss";
 @import "./typography.scss";
 @import "./theme.scss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 html, body, #root, #app, #app>div {
   height: 100%
